# autometa

./: .gitignore  AUTHORS.rst  README.md  pyproject.toml  test.py
src/autometa/: __init__.py  api.py  autometa.py  metatoml.py  util.py
src/easypip/: execute.py  metadata_toml.py  metatoml.py  util.py  utils.py
src/pipbox/: api.py  utils.py
