[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "easypip"
version = "0.0.2"
description = "easypip library prototype"
readme = "README.md"
authors = [
    {name = "Carlos Corral-Williams", email = "c0rwil@protonmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "build",
    "setuptools",
    "black",
    "pytest",
    "importlib_metadata",
    "toml",
    "pyyaml",
    "json"
]

[project.scripts]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["test"]
