[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "autometa"
version = "0.0.8"
description = "autometa library prototype"
readme = "README.md"
authors = [
    {name = "Carlos Corral-Williams", email = "c0rwil@protonmail.com"}
]
requires-python = ">=3.10"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "build",
    "setuptools",
    "black",
    "pytest",
    "importlib_metadata",
    "toml",
    "pyyaml",
]

[project.scripts]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["test"]
